--- a/src/components/Header/style.module.scss
+++ b/src/components/Header/style.module.scss
@@ -4,6 +4,7 @@
       display: flex;
       align-items: center;
       padding: 0 10px;
+      box-shadow: 0 5px 5px #c7c6c6;
 
       .headerMain {
         display: flex;
