--- a/src/components/Profile/ProfileInfo/MyPost/style.module.scss
+++ b/src/components/Profile/ProfileInfo/MyPost/style.module.scss
@@ -11,5 +11,14 @@
             color:black;
            align-self: center;
         }
+    button{
+
+        opacity: 0;
+        transition: opacity 1s ease;
+    }
+    &:hover button{
+            opacity: 0.5;
+        }
+
 
 }
