add userPage and login ,logout

--- a/src/components/Header/style.module.scss
+++ b/src/components/Header/style.module.scss
@@ -21,14 +21,11 @@
         }
 
         .login {
-          justify-items: end;
-          display: flex;
-          justify-content: space-between;
-          width: 80px;
-
-          span {
+          margin-right:50px;
+          &:hover{
+            cursor: pointer;
           }
         }
-
       }
+
     }
