--- a/src/components/Users/style.module.scss
+++ b/src/components/Users/style.module.scss
@@ -1,11 +1,6 @@
-.users{
-  display: grid;
-  grid-template-columns: 1fr 3fr 1fr;
-  width: 600px;
-  background:white;
-  padding: 10px;
-  border: 1px solid #bfbcbc;
-  align-items: center;
-  border-radius: 10px;
-  margin-bottom: 10px;
+.mainPage{
+  ul{
+    margin:10px;
+  }
+  
 }
